@@ -3,23 +3,24 @@
     public static class CacheProfileName
     {
         // $Start-Windows81IE11EdgeFavicon$
-        public const string BrowserConfigXml = "BrowserConfigXml";
+        public const string BrowserConfigXml = nameof(BrowserConfigXml);
         // $End-Windows81IE11EdgeFavicon$
-        public const string Error = "Error";
+        public const string Error = nameof(Error);
         // $Start-Feed$
-        public const string Feed = "Feed";
+        public const string Feed = nameof(Feed);
         // $End-Feed$
         // $Start-AndroidChromeM39Favicons$
-        public const string ManifestJson = "ManifestJson";
+        public const string ManifestJson = nameof(ManifestJson);
         // $End-AndroidChromeM39Favicons$
         // $Start-Search$
-        public const string OpenSearchXml = "OpenSearchXml";
+        public const string OpenSearchXml = nameof(OpenSearchXml);
         // $End-Search$
         // $Start-RobotsText$
-        public const string RobotsText = "RobotsText";
+        public const string RobotsText = nameof(RobotsText);
         // $End-RobotsText$
         // $Start-Sitemap$
-        public const string SitemapNodes = "SitemapNodes";
+        public const string SitemapNodes = nameof(SitemapNodes);
         // $End-Sitemap$
+        public const string StaticFiles = nameof(StaticFiles);
     }
 }
