@@ -1,9 +1,10 @@
 ﻿Version 4.7.0
 MVC 6
+- Add the Cache-Control HTTP header to the static files middleware and make it config driven.
 - Removed bower.json, using package.json instead.
 - Upgraded applicationinsights-js from 0.22.9 to 1.0.4.
 - Upgraded Bootstrap from 3.3.6 to 3.3.7.
-- Upgraded Font Awesome from 4.6.3 to 4.7.0..
+- Upgraded Font Awesome from 4.6.3 to 4.7.0.
 - Upgraded jQuery from 2.2.3 to 3.1.1.
 - Upgraded jquery-validation from 1.15.0 to 1.15.1.
 - Removed Modernizr.
